style and functionality updates
